Making event station distance calculation script, selected events within 500 km and then removed extras that did not have data, saved new catalog

--- a/ipynbs/download_strain_data.ipynb
+++ b/ipynbs/download_strain_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2fd0b2e9",
+   "id": "319fae08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,32 @@
       "Earthquake 2/35\n",
       "Earthquake 3/35\n",
       "Earthquake 4/35\n",
-      "Earthquake 5/35\n"
+      "Earthquake 5/35\n",
+      "Earthquake 6/35\n",
+      "Earthquake 7/35\n",
+      "Earthquake 8/35\n",
+      "Earthquake 9/35\n",
+      "Earthquake 10/35\n",
+      "Earthquake 11/35\n",
+      "Earthquake 12/35\n",
+      "Earthquake 13/35\n",
+      "Earthquake 14/35\n",
+      "Earthquake 15/35\n",
+      "Earthquake 16/35\n",
+      "Earthquake 17/35\n",
+      "Earthquake 18/35\n",
+      "Earthquake 19/35\n",
+      "Earthquake 20/35\n",
+      "Earthquake 21/35\n",
+      "Earthquake 22/35\n",
+      "Earthquake 23/35\n",
+      "Earthquake 24/35\n",
+      "Earthquake 25/35\n",
+      "Earthquake 26/35\n",
+      "Earthquake 27/35\n",
+      "Earthquake 28/35\n",
+      "Earthquake 29/35\n",
+      "Earthquake 30/35\n"
      ]
     }
    ],
