--- a/ipynbs/calculate_event_station_distances.ipynb
+++ b/ipynbs/calculate_event_station_distances.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -17,103 +18,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stas_locs = np.genfromtxt('/Users/sydneydybing/StrainProject/2024/stations_with_locations.txt', dtype = str)"
+    "earthquakes = pd.read_csv('/Users/sydneydybing/StrainProject/2024/M6_catalog_2004-2024.csv', dtype = str)\n",
+    "bsm_mda = pd.read_csv('/Users/sydneydybing/StrainProject/2024/bsm_metadata.csv')\n",
+    "NA_only = bsm_mda.loc[bsm_mda['LONG'] < -110]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a762c1b8",
+   "execution_count": 3,
+   "id": "09b614f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq_times = earthquakes['time'].values\n",
+    "eq_mags = earthquakes['mag'].values\n",
+    "eq_lats = earthquakes['latitude'].values\n",
+    "eq_lons = earthquakes['longitude'].values\n",
+    "\n",
+    "eq_names = []\n",
+    "\n",
+    "for i in range(len(eq_times)):\n",
+    "    eq_date = eq_times[i][:10]\n",
+    "    eq_mag = eq_mags[i]\n",
+    "    eq_name = eq_date + '_M' + eq_mag\n",
+    "    eq_names.append(eq_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d7fb554f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stas = NA_only['BNUM'].values\n",
+    "sta_lats = NA_only['LAT'].values\n",
+    "sta_lons = NA_only['LONG'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "42b6c1b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from obspy.geodetics import gps2dist_azimuth, kilometer2degrees\n",
+    "\n",
+    "full_eq_names = []\n",
+    "full_eq_lats = []\n",
+    "full_eq_lons = []\n",
+    "full_eq_mags = []\n",
+    "full_sta_names = []\n",
+    "full_sta_lats = []\n",
+    "full_sta_lons = []\n",
+    "full_dists = []\n",
+    "\n",
+    "for i in range(len(eq_names)):\n",
+    "    \n",
+    "    eq_name = eq_names[i]\n",
+    "    eq_lat = float(eq_lats[i])\n",
+    "    eq_lon = float(eq_lons[i])\n",
+    "    eq_mag = float(eq_mags[i])\n",
+    "    \n",
+    "    for j in range(len(stas)):\n",
+    "        \n",
+    "        sta_name = stas[j]\n",
+    "        sta_lat = float(sta_lats[j])\n",
+    "        sta_lon = float(sta_lons[j])\n",
+    "\n",
+    "        distaz = gps2dist_azimuth(eq_lat, eq_lon, sta_lat, sta_lon)\n",
+    "        dist_m = distaz[0]\n",
+    "        dist_km = dist_m/1000\n",
+    "        \n",
+    "        full_eq_names.append(eq_name)\n",
+    "        full_eq_lats.append(eq_lat)\n",
+    "        full_eq_lons.append(eq_lon)\n",
+    "        full_eq_mags.append(eq_mag)\n",
+    "        full_sta_names.append(sta_name)\n",
+    "        full_sta_lats.append(sta_lat)\n",
+    "        full_sta_lons.append(sta_lon)\n",
+    "        full_dists.append(dist_km)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a5eb089f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([['-123.131409', '48.043072', 'B001'],\n",
-       "       ['-124.140862', '48.062359', 'B003'],\n",
-       "       ['-124.42701', '48.201923', 'B004'],\n",
-       "       ['-123.503281', '48.059547', 'B005'],\n",
-       "       ['-123.500801', '48.0588', 'B006'],\n",
-       "       ['-123.504112', '48.057575', 'B007'],\n",
-       "       ['-123.451172', '48.64867', 'B009'],\n",
-       "       ['-123.451332', '48.650169', 'B010'],\n",
-       "       ['-123.448189', '48.649544', 'B011'],\n",
-       "       ['-125.541977', '48.924625', 'B012'],\n",
-       "       ['-122.910797', '47.813', 'B013'],\n",
-       "       ['-123.8125', '47.513302', 'B014'],\n",
-       "       ['-123.557503', '46.995998', 'B017'],\n",
-       "       ['-123.020302', '46.9795', 'B018'],\n",
-       "       ['-123.651802', '46.652699', 'B019'],\n",
-       "       ['-123.844498', '46.382702', 'B020'],\n",
-       "       ['-123.931046', '45.954609', 'B022'],\n",
-       "       ['-123.078697', '46.111198', 'B023'],\n",
-       "       ['-123.855797', '45.637798', 'B024'],\n",
-       "       ['-123.823051', '45.309353', 'B026'],\n",
-       "       ['-122.962166', '44.497334', 'B027'],\n",
-       "       ['-122.963837', '44.493668', 'B028'],\n",
-       "       ['-122.771698', '43.971298', 'B030'],\n",
-       "       ['-123.396698', '43.664299', 'B031'],\n",
-       "       ['-123.392303', '43.667999', 'B032'],\n",
-       "       ['-123.124496', '43.291698', 'B033'],\n",
-       "       ['-123.383415', '42.503513', 'B035'],\n",
-       "       ['-123.381668', '42.505833', 'B036'],\n",
-       "       ['-122.484703', '41.466702', 'B039'],\n",
-       "       ['-122.420502', '41.830799', 'B040'],\n",
-       "       ['-123.996498', '40.436001', 'B045'],\n",
-       "       ['-121.580803', '36.7995', 'B058'],\n",
-       "       ['-121.474167', '36.743668', 'B065'],\n",
-       "       ['-121.592171', '36.857533', 'B066'],\n",
-       "       ['-121.565498', '36.764999', 'B067'],\n",
-       "       ['-120.345001', '35.831001', 'B072'],\n",
-       "       ['-120.471703', '35.946701', 'B073'],\n",
-       "       ['-120.515297', '35.929199', 'B075'],\n",
-       "       ['-120.424797', '35.9398', 'B076'],\n",
-       "       ['-120.3452', '35.8377', 'B078'],\n",
-       "       ['-120.205704', '35.715698', 'B079'],\n",
-       "       ['-116.714165', '33.711166', 'B081'],\n",
-       "       ['-116.596008', '33.598183', 'B082'],\n",
-       "       ['-116.456367', '33.611568', 'B084'],\n",
-       "       ['-116.530998', '33.557499', 'B086'],\n",
-       "       ['-116.602669', '33.495499', 'B087'],\n",
-       "       ['-116.620522', '33.37495', 'B088'],\n",
-       "       ['-116.596123', '33.599892', 'B089'],\n",
-       "       ['-116.764099', '33.593689', 'B093'],\n",
-       "       ['-120.002998', '35.686001', 'B900'],\n",
-       "       ['-120.141998', '35.689701', 'B901'],\n",
-       "       ['-117.668503', '36.192501', 'B916'],\n",
-       "       ['-117.258797', '35.4053', 'B917'],\n",
-       "       ['-117.6017', '35.935699', 'B918'],\n",
-       "       ['-117.462196', '35.586498', 'B921'],\n",
-       "       ['-124.131203', '48.820202', 'B926'],\n",
-       "       ['-124.811302', '49.2188', 'B927'],\n",
-       "       ['-125.134499', '48.833698', 'B928'],\n",
-       "       ['-123.969002', '40.060001', 'B933'],\n",
-       "       ['-123.691399', '39.844501', 'B934'],\n",
-       "       ['-123.573196', '40.478699', 'B935'],\n",
-       "       ['-122.219002', '46.986801', 'B941'],\n",
-       "       ['-122.911301', '47.813202', 'B943'],\n",
-       "       ['-122.199501', '37.860199', 'B054'],\n",
-       "       ['-122.565498', '38.027302', 'B057'],\n",
-       "       ['-122.264801', '46.303299', 'B201'],\n",
-       "       ['-122.333664', '46.168999', 'B203']], dtype='<U11')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2660\n",
+      "2660\n",
+      "2660\n",
+      "2660\n",
+      "2660\n",
+      "2660\n",
+      "2660\n",
+      "2660\n"
+     ]
     }
    ],
    "source": [
-    "stas_locs"
+    "print(len(full_eq_names))\n",
+    "print(len(full_eq_lats))\n",
+    "print(len(full_eq_lons))\n",
+    "print(len(full_eq_mags))\n",
+    "print(len(full_sta_names))\n",
+    "print(len(full_sta_lats))\n",
+    "print(len(full_sta_lons))\n",
+    "print(len(full_dists))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2084226",
+   "execution_count": 17,
+   "id": "ec8263b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2660, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "hypodist_array = np.column_stack((np.array(full_eq_names),np.array(full_eq_lats),np.array(full_eq_lons),np.array(full_eq_mags),np.array(full_sta_names),np.array(full_sta_lats),np.array(full_sta_lons),np.array(full_dists)))\n",
+    "print(hypodist_array.shape)\n",
+    "\n",
+    "np.save('/Users/sydneydybing/StrainProject/2024/NA_evt-sta_dist_array.npy', hypodist_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ae9638f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Array order:\n",
+    "\n",
+    "# 0. Earthquake identifier\n",
+    "# 1. Earthquake latitude\n",
+    "# 2. Earthquake longitude\n",
+    "# 3. Earthquake magnitude\n",
+    "# 4. Station name\n",
+    "# 5. Station latitude\n",
+    "# 6. Station longitude\n",
+    "# 7. Hypocentral distance"
+   ]
   }
  ],
  "metadata": {
