--- a/ipynbs/download_strain_data.ipynb
+++ b/ipynbs/download_strain_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "319fae08",
+   "id": "2c0c0af6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e208dc9a",
    "metadata": {
     "scrolled": true
@@ -104,7 +104,12 @@
       "Earthquake 27/35\n",
       "Earthquake 28/35\n",
       "Earthquake 29/35\n",
-      "Earthquake 30/35\n"
+      "Earthquake 30/35\n",
+      "Earthquake 31/35\n",
+      "Earthquake 32/35\n",
+      "Earthquake 33/35\n",
+      "Earthquake 34/35\n",
+      "Earthquake 35/35\n"
      ]
     }
    ],
