--- a/ipynbs/4_calculate_event_station_distances.ipynb
+++ b/ipynbs/4_calculate_event_station_distances.ipynb
@@ -36,17 +36,41 @@
     "eq_lons = earthquakes['longitude'].values\n",
     "\n",
     "eq_names = []\n",
+    "eq_name_dups = ['2019-12-23_M6', '2018-10-22_M6.5']\n",
     "\n",
     "for i in range(len(eq_times)):\n",
     "    eq_date = eq_times[i][:10]\n",
     "    eq_mag = eq_mags[i]\n",
     "    eq_name = eq_date + '_M' + eq_mag\n",
+    "    \n",
+    "    if eq_name in eq_name_dups:\n",
+    "        eq_date = eq_times[i][:13]\n",
+    "        eq_name = eq_date + '_M' + eq_mag\n",
+    "        \n",
     "    eq_names.append(eq_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "6fb70d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2023-04-13_M6', '2022-12-20_M6.4', '2022-11-22_M6.2', '2021-12-20_M6.2', '2021-07-08_M6', '2020-05-15_M6.5', '2020-03-31_M6.5', '2019-12-25_M6.3', '2019-12-23T20_M6', '2019-12-23T19_M6', '2019-08-29_M6.3', '2019-07-06_M7.1', '2019-07-04_M6.4', '2019-07-04_M6.2', '2018-10-22T06_M6.5', '2018-10-22_M6.8', '2018-10-22T05_M6.5', '2018-08-22_M6.2', '2016-12-08_M6.6', '2014-08-24_M6.02', '2014-04-24_M6.5', '2014-03-10_M6.8', '2013-09-04_M6', '2013-09-03_M6.1', '2012-12-14_M6.3', '2012-11-08_M6.1', '2012-04-11_M6', '2011-09-09_M6.4', '2010-04-04_M7.2', '2010-01-10_M6.5', '2008-01-10_M6.3', '2005-06-17_M6.6', '2005-06-15_M7.2', '2004-11-02_M6.7', '2004-07-19_M6.4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(eq_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "d7fb554f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "42b6c1b4",
    "metadata": {},
    "outputs": [],
@@ -106,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a5eb089f",
    "metadata": {},
    "outputs": [
@@ -140,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ec8263b1",
    "metadata": {},
    "outputs": [
@@ -161,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ae9638f7",
    "metadata": {},
    "outputs": [],
