--- a/ipynbs/plotting/pick_mcmc_parameters_by_event_and_hypdist.ipynb
+++ b/ipynbs/plotting/pick_mcmc_parameters_by_event_and_hypdist.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "cc3cd0be-431f-4b40-9d9b-71d81b8db1d3",
    "metadata": {},
    "outputs": [
@@ -47,31 +47,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B054 482.478026337\n",
-      "B058 385.971138396\n",
-      "B065 375.060692332\n",
-      "B066 388.87986489\n",
-      "B067 383.552457585\n",
-      "B072 257.286709708\n",
-      "B073 269.503500735\n",
-      "B075 273.270029761\n",
-      "B076 265.222551712\n",
-      "B078 257.335349623\n",
-      "B079 244.492450373\n",
-      "B081 232.74808791\n",
-      "B082 248.124801355\n",
-      "B084 251.328705732\n",
-      "B086 254.420081762\n",
-      "B087 258.702150821\n",
-      "B088 270.928557318\n",
-      "B089 247.942156619\n",
-      "B093 243.876145122\n",
-      "B900 226.200730207\n",
-      "B901 238.770996527\n",
-      "B916 56.0594638122\n",
-      "B917 41.5251576159\n",
-      "B921 13.7133865618\n",
-      "B946 254.611186386\n"
+      "B027 444.687121999\n",
+      "B028 444.262153088\n",
+      "B030 399.557660442\n",
+      "B031 346.134591691\n",
+      "B032 346.570238152\n",
+      "B033 320.143319657\n",
+      "B035 236.32363619\n",
+      "B036 236.614726572\n",
+      "B039 233.390999612\n",
+      "B040 252.929813125\n",
+      "B045 105.637537052\n",
+      "B054 415.391534598\n",
+      "B057 381.578099052\n",
+      "B933 130.578201448\n",
+      "B934 164.207759514\n",
+      "B935 137.589214225\n"
      ]
     }
    ],
@@ -91,7 +82,7 @@
     "# 8. Hypocentral distance (km)\n",
     "# 9. RMS strain SNR\n",
     "\n",
-    "j = np.where(dist_array[:,0] == '2019-07-04_M6.4')[0]\n",
+    "j = np.where(dist_array[:,0] == '2014-03-10_M6.8')[0]\n",
     "for idx in range(len(j)):\n",
     "    jidx = j[idx]\n",
     "    print(dist_array[jidx,5], dist_array[jidx,8])"
@@ -156,18 +147,37 @@
     "    xhigh = 60\n",
     "elif eq_id == '2018-10-22T05_M6.5': # Somewhat of a pause but all similar? Going long\n",
     "    xhigh = 60\n",
-    "elif eq_id == :\n",
-    "    xhigh = \n",
-    "elif eq_id == :\n",
-    "    xhigh = \n",
-    "elif eq_id == :\n",
-    "    xhigh = \n",
-    "elif eq_id == :\n",
-    "    xhigh = \n",
-    "elif eq_id == :\n",
-    "    xhigh = \n",
-    "elif eq_id == :\n",
-    "    xhigh = "
+    "elif eq_id == '2018-08-22_M6.2':\n",
+    "    xhigh = 60\n",
+    "elif eq_id == '2016-12-08_M6.6':\n",
+    "    xhigh = 60\n",
+    "elif eq_id == '2014-08-24_M6.02':\n",
+    "    xhigh = 27\n",
+    "elif eq_id == '2014-04-24_M6.5':\n",
+    "    xhigh = 50\n",
+    "elif eq_id == '2014-03-10_M6.8':\n",
+    "    if hypdist < 110:\n",
+    "        xhigh = 25\n",
+    "    else:\n",
+    "        xhigh = 40\n",
+    "elif eq_id == '2013-09-04_M6':\n",
+    "    xhigh = 25\n",
+    "elif eq_id == '2013-09-03_M6.1':\n",
+    "    xhigh = 30\n",
+    "elif eq_id == '2012-12-14_M6.3':\n",
+    "    xhigh = 25\n",
+    "elif eq_id == '2012-11-08_M6.1':\n",
+    "    xhigh = 42\n",
+    "elif eq_id == '2012-04-11_M6':\n",
+    "    xhigh = 30\n",
+    "elif eq_id == '2011-09-09_M6.4':\n",
+    "    xhigh = 35\n",
+    "elif eq_id == '2010-04-04_M7.2':\n",
+    "    xhigh = 35\n",
+    "elif eq_id == '2010-01-10_M6.5':\n",
+    "    xhigh = 35\n",
+    "elif eq_id == '2008-01-10_M6.3':\n",
+    "    xhigh = 24"
    ]
   },
   {
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "e4cfeccd-6367-4592-a1af-ae593b82b761",
    "metadata": {},
    "outputs": [
@@ -244,40 +254,19 @@
      "output_type": "stream",
      "text": [
       "2023-04-13_M6\n",
-      "2022-12-20_M6.4\n",
-      "2022-11-22_M6.2\n",
-      "2021-12-20_M6.2\n",
-      "2021-07-08_M6\n",
-      "2020-05-15_M6.5\n",
-      "2020-03-31_M6.5\n",
-      "2019-12-25_M6.3\n",
-      "2019-12-23T20_M6\n",
-      "2019-12-23T19_M6\n",
-      "2019-08-29_M6.3\n",
-      "2019-07-06_M7.1\n",
-      "2019-07-04_M6.4\n",
-      "2019-07-04_M6.2\n",
-      "2018-10-22T06_M6.5\n",
-      "2018-10-22_M6.8\n",
-      "2018-10-22T05_M6.5\n",
-      "2018-08-22_M6.2\n",
-      "2016-12-08_M6.6\n",
-      "2014-08-24_M6.02\n",
-      "2014-04-24_M6.5\n",
-      "2014-03-10_M6.8\n",
-      "2013-09-04_M6\n",
-      "2013-09-03_M6.1\n",
-      "2012-12-14_M6.3\n",
-      "2012-11-08_M6.1\n",
-      "2012-04-11_M6\n",
-      "2011-09-09_M6.4\n",
-      "2010-04-04_M7.2\n",
-      "2010-01-10_M6.5\n",
-      "2008-01-10_M6.3\n",
-      "2005-06-17_M6.6\n",
-      "2005-06-15_M7.2\n",
-      "2004-11-02_M6.7\n",
-      "2004-07-19_M6.4\n"
+      "60\n",
+      "2022-12-20_M6.4\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'hypdist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yg/s8qp7lfs59g_tbwsx_wxkdx80000gn/T/ipykernel_13237/2098617232.py\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mxhigh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m60\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0meq_id\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'2022-12-20_M6.4'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mhypdist\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m             \u001b[0mxhigh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hypdist' is not defined"
      ]
     }
    ],
@@ -293,8 +282,98 @@
     "for i in range(len(eq_ids)):\n",
     "    \n",
     "    eq_id = eq_ids[i]\n",
+    "    j = np.where(dist_array[:,0] == eq_id)[0]\n",
+    "    hypdist = dist_array[j,\n",
     "    \n",
-    "    print(str(eq_id))"
+    "    print(str(eq_id))\n",
+    "    \n",
+    "    # If it pauses, try to use just the slope before the pause \n",
+    "\n",
+    "    if eq_id == '2023-04-13_M6':\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2022-12-20_M6.4':\n",
+    "        if hypdist < 200:\n",
+    "            xhigh = 20\n",
+    "        else:\n",
+    "            xhigh = 40\n",
+    "    elif eq_id == '2022-11-22_M6.2': # Weird one that pauses for a while then grows again\n",
+    "        xhigh = 25\n",
+    "    elif eq_id == '2021-12-20_M6.2':\n",
+    "        if hypdst < 30: \n",
+    "            xhigh = 20\n",
+    "        elif 30 < hypdist < 50:\n",
+    "            xhigh = 25\n",
+    "        elif 50 < hypdist < 100:\n",
+    "            xhigh = 30\n",
+    "        else:\n",
+    "            xhigh = 60\n",
+    "    elif eq_id == '2021-07-08_M6': # Lots of more gradual ones with pause again\n",
+    "        if hypdist < 300:\n",
+    "            xhigh = 25\n",
+    "        else:\n",
+    "            xhigh = 50\n",
+    "    elif eq_id == '2020-05-15_M6.5':\n",
+    "        xhigh = 30\n",
+    "    elif eq_id == '2020-03-31_M6.5':\n",
+    "        xhigh = 35\n",
+    "    elif eq_id == '2019-12-25_M6.3':\n",
+    "        xhigh = 35\n",
+    "    elif eq_id == '2019-12-23T20_M6':\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2019-12-23T19_M6':\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2019-08-29_M6.3': # All flatten fast\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2019-07-06_M7.1': # Ridgecrest mainshock\n",
+    "        xhigh = 27\n",
+    "    elif eq_id == '2019-07-04_M6.4': # Ridgecrest foreshock\n",
+    "        if hypdist < 50:\n",
+    "            xhigh = 20\n",
+    "        else:\n",
+    "            xhigh = 27\n",
+    "    elif eq_id == '2019-07-04_M6.2':\n",
+    "        xhigh = 35\n",
+    "    # elif eq_id == '2018-10-22T06_M6.5': # No waveforms with high enough SNR\n",
+    "    #     xhigh = \n",
+    "    elif eq_id == '2018-10-22_M6.8': # Has like 3 slopes? Letting it go long\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2018-10-22T05_M6.5': # Somewhat of a pause but all similar? Going long\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2018-08-22_M6.2':\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2016-12-08_M6.6':\n",
+    "        xhigh = 60\n",
+    "    elif eq_id == '2014-08-24_M6.02':\n",
+    "        xhigh = 27\n",
+    "    elif eq_id == '2014-04-24_M6.5':\n",
+    "        xhigh = 50\n",
+    "    elif eq_id == '2014-03-10_M6.8':\n",
+    "        if hypdist < 110:\n",
+    "            xhigh = 25\n",
+    "        else:\n",
+    "            xhigh = 40\n",
+    "    elif eq_id == '2013-09-04_M6':\n",
+    "        xhigh = 25\n",
+    "    elif eq_id == '2013-09-03_M6.1':\n",
+    "        xhigh = 30\n",
+    "    elif eq_id == '2012-12-14_M6.3':\n",
+    "        xhigh = 25\n",
+    "    elif eq_id == '2012-11-08_M6.1':\n",
+    "        xhigh = 42\n",
+    "    elif eq_id == '2012-04-11_M6':\n",
+    "        xhigh = 30\n",
+    "    elif eq_id == '2011-09-09_M6.4':\n",
+    "        xhigh = 35\n",
+    "    elif eq_id == '2010-04-04_M7.2':\n",
+    "        xhigh = 35\n",
+    "    elif eq_id == '2010-01-10_M6.5':\n",
+    "        xhigh = 35\n",
+    "    elif eq_id == '2008-01-10_M6.3':\n",
+    "        xhigh = 24\n",
+    "    else:\n",
+    "        xhigh = 'no data'\n",
+    "    \n",
+    "    print(xhigh)"
    ]
   },
   {
