Poster night push

--- a/ipynbs/20_calculate_MCMC_straight_lines_on_peak_strain.ipynb
+++ b/ipynbs/20_calculate_MCMC_straight_lines_on_peak_strain.ipynb
@@ -67370,19 +67370,532 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5cbf0dd1-ece1-4834-a491-88b28d048629",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eq_id</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>sta</th>\n",
+       "      <th>hypdist</th>\n",
+       "      <th>xhigh</th>\n",
+       "      <th>m1</th>\n",
+       "      <th>m2</th>\n",
+       "      <th>xinter</th>\n",
+       "      <th>sigma</th>\n",
+       "      <th>trans_time</th>\n",
+       "      <th>behavior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B003</td>\n",
+       "      <td>423</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.276567</td>\n",
+       "      <td>0.012251</td>\n",
+       "      <td>14.075615</td>\n",
+       "      <td>0.141517</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>398</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.523278</td>\n",
+       "      <td>0.010967</td>\n",
+       "      <td>12.877702</td>\n",
+       "      <td>0.101206</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B005</td>\n",
+       "      <td>468</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.392836</td>\n",
+       "      <td>0.009337</td>\n",
+       "      <td>12.057298</td>\n",
+       "      <td>0.075473</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B009</td>\n",
+       "      <td>456</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.428682</td>\n",
+       "      <td>0.000518</td>\n",
+       "      <td>12.471551</td>\n",
+       "      <td>0.079256</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B012</td>\n",
+       "      <td>299</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.420404</td>\n",
+       "      <td>0.013704</td>\n",
+       "      <td>13.220529</td>\n",
+       "      <td>0.112984</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B066</td>\n",
+       "      <td>499</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.228458</td>\n",
+       "      <td>0.026041</td>\n",
+       "      <td>15.608228</td>\n",
+       "      <td>0.096790</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B933</td>\n",
+       "      <td>89</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.205989</td>\n",
+       "      <td>0.046212</td>\n",
+       "      <td>12.710480</td>\n",
+       "      <td>0.220511</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B934</td>\n",
+       "      <td>123</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.258354</td>\n",
+       "      <td>0.063122</td>\n",
+       "      <td>12.957077</td>\n",
+       "      <td>0.087686</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B935</td>\n",
+       "      <td>96</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.338175</td>\n",
+       "      <td>0.021897</td>\n",
+       "      <td>12.540953</td>\n",
+       "      <td>0.210012</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>2008-01-10_M6.3</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>B026</td>\n",
+       "      <td>321</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.442317</td>\n",
+       "      <td>0.052398</td>\n",
+       "      <td>11.868874</td>\n",
+       "      <td>0.089392</td>\n",
+       "      <td>11.9</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>326 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               eq_id  mag   sta  hypdist  xhigh        m1        m2  \\\n",
+       "0      2023-04-13_M6  6.0  B003      423     60  0.276567  0.012251   \n",
+       "1      2023-04-13_M6  6.0  B004      398     60  0.523278  0.010967   \n",
+       "2      2023-04-13_M6  6.0  B005      468     60  0.392836  0.009337   \n",
+       "3      2023-04-13_M6  6.0  B009      456     60  0.428682  0.000518   \n",
+       "4      2023-04-13_M6  6.0  B012      299     60  0.420404  0.013704   \n",
+       "..               ...  ...   ...      ...    ...       ...       ...   \n",
+       "321  2010-01-10_M6.5  6.5  B066      499     35  0.228458  0.026041   \n",
+       "322  2010-01-10_M6.5  6.5  B933       89     35  1.205989  0.046212   \n",
+       "323  2010-01-10_M6.5  6.5  B934      123     35  0.258354  0.063122   \n",
+       "324  2010-01-10_M6.5  6.5  B935       96     35  1.338175  0.021897   \n",
+       "325  2008-01-10_M6.3  6.3  B026      321     24  0.442317  0.052398   \n",
+       "\n",
+       "        xinter     sigma  trans_time behavior  \n",
+       "0    14.075615  0.141517        14.1        b  \n",
+       "1    12.877702  0.101206        12.9        g  \n",
+       "2    12.057298  0.075473        12.1        g  \n",
+       "3    12.471551  0.079256        12.5        g  \n",
+       "4    13.220529  0.112984        13.3        g  \n",
+       "..         ...       ...         ...      ...  \n",
+       "321  15.608228  0.096790        15.7        g  \n",
+       "322  12.710480  0.220511        12.8        g  \n",
+       "323  12.957077  0.087686        13.0        b  \n",
+       "324  12.540953  0.210012        12.6        g  \n",
+       "325  11.868874  0.089392        11.9        b  \n",
+       "\n",
+       "[326 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcmc_results_class_by_eye = pd.read_csv(path_to_files + 'mcmc_results_summary.csv', usecols = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
+    "mcmc_results_class_by_eye"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "id": "08eba809-c74d-4f87-a57a-63e3cf16c08f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eq_id</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>sta</th>\n",
+       "      <th>hypdist</th>\n",
+       "      <th>xhigh</th>\n",
+       "      <th>m1</th>\n",
+       "      <th>m2</th>\n",
+       "      <th>xinter</th>\n",
+       "      <th>sigma</th>\n",
+       "      <th>trans_time</th>\n",
+       "      <th>behavior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B004</td>\n",
+       "      <td>398</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.523278</td>\n",
+       "      <td>0.010967</td>\n",
+       "      <td>12.877702</td>\n",
+       "      <td>0.101206</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B005</td>\n",
+       "      <td>468</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.392836</td>\n",
+       "      <td>0.009337</td>\n",
+       "      <td>12.057298</td>\n",
+       "      <td>0.075473</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B009</td>\n",
+       "      <td>456</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.428682</td>\n",
+       "      <td>0.000518</td>\n",
+       "      <td>12.471551</td>\n",
+       "      <td>0.079256</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B012</td>\n",
+       "      <td>299</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.420404</td>\n",
+       "      <td>0.013704</td>\n",
+       "      <td>13.220529</td>\n",
+       "      <td>0.112984</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-04-13_M6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>B927</td>\n",
+       "      <td>349</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.644048</td>\n",
+       "      <td>0.006067</td>\n",
+       "      <td>12.064490</td>\n",
+       "      <td>0.108054</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B054</td>\n",
+       "      <td>377</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.474619</td>\n",
+       "      <td>0.001973</td>\n",
+       "      <td>13.653904</td>\n",
+       "      <td>0.078392</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B057</td>\n",
+       "      <td>344</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.379983</td>\n",
+       "      <td>0.023154</td>\n",
+       "      <td>14.384422</td>\n",
+       "      <td>0.117667</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B066</td>\n",
+       "      <td>499</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.228458</td>\n",
+       "      <td>0.026041</td>\n",
+       "      <td>15.608228</td>\n",
+       "      <td>0.096790</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B933</td>\n",
+       "      <td>89</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.205989</td>\n",
+       "      <td>0.046212</td>\n",
+       "      <td>12.710480</td>\n",
+       "      <td>0.220511</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>2010-01-10_M6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>B935</td>\n",
+       "      <td>96</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.338175</td>\n",
+       "      <td>0.021897</td>\n",
+       "      <td>12.540953</td>\n",
+       "      <td>0.210012</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>210 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               eq_id  mag   sta  hypdist  xhigh        m1        m2  \\\n",
+       "1      2023-04-13_M6  6.0  B004      398     60  0.523278  0.010967   \n",
+       "2      2023-04-13_M6  6.0  B005      468     60  0.392836  0.009337   \n",
+       "3      2023-04-13_M6  6.0  B009      456     60  0.428682  0.000518   \n",
+       "4      2023-04-13_M6  6.0  B012      299     60  0.420404  0.013704   \n",
+       "5      2023-04-13_M6  6.0  B927      349     60  0.644048  0.006067   \n",
+       "..               ...  ...   ...      ...    ...       ...       ...   \n",
+       "319  2010-01-10_M6.5  6.5  B054      377     35  0.474619  0.001973   \n",
+       "320  2010-01-10_M6.5  6.5  B057      344     35  0.379983  0.023154   \n",
+       "321  2010-01-10_M6.5  6.5  B066      499     35  0.228458  0.026041   \n",
+       "322  2010-01-10_M6.5  6.5  B933       89     35  1.205989  0.046212   \n",
+       "324  2010-01-10_M6.5  6.5  B935       96     35  1.338175  0.021897   \n",
+       "\n",
+       "        xinter     sigma  trans_time behavior  \n",
+       "1    12.877702  0.101206        12.9        g  \n",
+       "2    12.057298  0.075473        12.1        g  \n",
+       "3    12.471551  0.079256        12.5        g  \n",
+       "4    13.220529  0.112984        13.3        g  \n",
+       "5    12.064490  0.108054        12.1        g  \n",
+       "..         ...       ...         ...      ...  \n",
+       "319  13.653904  0.078392        13.7        g  \n",
+       "320  14.384422  0.117667        14.4        g  \n",
+       "321  15.608228  0.096790        15.7        g  \n",
+       "322  12.710480  0.220511        12.8        g  \n",
+       "324  12.540953  0.210012        12.6        g  \n",
+       "\n",
+       "[210 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "good_results = mcmc_results_class_by_eye[mcmc_results_class_by_eye['behavior'] == 'g']\n",
+    "bad_results = mcmc_results_class_by_eye[mcmc_results_class_by_eye['behavior'] == 'b']\n",
+    "good_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "70ed3bf6-4f0b-4543-b377-3a19ef889fa2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(dpi = 400)\n",
+    "plt.scatter(bad_results.hypdist.values, bad_results.xinter.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
+    "plt.scatter(good_results.hypdist.values, good_results.xinter.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
+    "plt.xlabel('Hypocentral distance (km)')\n",
+    "plt.ylabel('Transition time (s)')\n",
+    "plt.legend()\n",
+    "# plt.show()\n",
+    "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_hypdist_vs_transtime.png', format = 'PNG')\n",
+    "plt.close()\n",
+    "\n",
+    "plt.figure(dpi = 400)\n",
+    "plt.scatter(bad_results.mag.values, bad_results.xinter.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
+    "plt.scatter(good_results.mag.values, good_results.xinter.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
+    "plt.xlabel('Earthquake magnitude')\n",
+    "plt.ylabel('Transition time (s)')\n",
+    "plt.legend()\n",
+    "# plt.show()\n",
+    "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_mag_vs_transtime.png', format = 'PNG')\n",
+    "plt.close()\n",
+    "\n",
+    "plt.figure(dpi = 400)\n",
+    "plt.scatter(bad_results.mag.values, bad_results.m1.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
+    "plt.scatter(good_results.mag.values, good_results.m1.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
+    "plt.xlabel('Earthquake magnitude')\n",
+    "plt.ylabel('Line 1 slope')\n",
+    "plt.legend()\n",
+    "# plt.show()\n",
+    "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_mag_vs_m1.png', format = 'PNG')\n",
+    "plt.close()\n",
+    "\n",
+    "plt.figure(dpi = 400)\n",
+    "plt.scatter(bad_results.mag.values, bad_results.m2.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
+    "plt.scatter(good_results.mag.values, good_results.m2.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
+    "plt.xlabel('Earthquake magnitude')\n",
+    "plt.ylabel('Line 2 slope')\n",
+    "plt.legend()\n",
+    "# plt.show()\n",
+    "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_mag_vs_m2.png', format = 'PNG')\n",
+    "plt.close()"
+   ]
   },
   {
    "cell_type": "code",
