Final poster updates

--- a/ipynbs/filtered_strain/20_calculate_MCMC_straight_lines_on_peak_strain.ipynb
+++ b/ipynbs/filtered_strain/20_calculate_MCMC_straight_lines_on_peak_strain.ipynb
@@ -67851,89 +67851,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "37b186ce-d17f-43ca-973e-4c286f8d945a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate earthquake source durations\n",
-    "\n",
-    "# Get M0 from Mw, then use relation in Melgar and Hayes, 2017 to get duration\n",
-    "\n",
-    "mags_for_dur = np.arange(6,7.25,0.05)\n",
-    "# print(mags_for_dur)\n",
-    "\n",
-    "# Preferred params for source duration\n",
-    "apref = -6.407\n",
-    "bpref = 0.385\n",
-    "\n",
-    "source_durs = []\n",
-    "\n",
-    "for Mw in mags_for_dur:\n",
-    "    \n",
-    "    M0 = 10**(1.5*Mw + 9.05)\n",
-    "    # print(M0)\n",
-    "    \n",
-    "    logS = apref + bpref * np.log10(M0)\n",
-    "    \n",
-    "    source_dur = 10**logS\n",
-    "    \n",
-    "    source_durs.append(source_dur)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "id": "70ed3bf6-4f0b-4543-b377-3a19ef889fa2",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(dpi = 400)\n",
-    "plt.scatter(bad_results.hypdist.values, bad_results.xinter.values-10, marker = 'x', color = '#E9072B', label = '\"Poorly behaved\" waveforms')\n",
-    "plt.scatter(good_results.hypdist.values, good_results.xinter.values-10, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
-    "plt.xlabel('Hypocentral distance (km)', fontsize = 14)\n",
-    "plt.ylabel('Time from P-wave arrival\\nto slope transition (s)', fontsize = 14)\n",
-    "plt.tick_params(labelsize = 12)\n",
-    "plt.legend(fontsize = 12)\n",
-    "plt.subplots_adjust(left = 0.15)\n",
+    "plt.scatter(bad_results.hypdist.values, bad_results.xinter.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
+    "plt.scatter(good_results.hypdist.values, good_results.xinter.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
+    "plt.xlabel('Hypocentral distance (km)')\n",
+    "plt.ylabel('Transition time (s)')\n",
+    "plt.legend()\n",
     "# plt.show()\n",
     "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_hypdist_vs_transtime.png', format = 'PNG')\n",
     "plt.close()\n",
     "\n",
     "plt.figure(dpi = 400)\n",
-    "plt.scatter(bad_results.mag.values, bad_results.xinter.values-10, marker = 'x', color = '#E9072B', label = '\"Poorly behaved\" waveforms')\n",
-    "plt.scatter(good_results.mag.values, good_results.xinter.values-10, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
-    "plt.plot(mags_for_dur, source_durs, color = 'lime', label = 'Estimated source duration')\n",
-    "plt.xlabel('Earthquake magnitude', fontsize = 14)\n",
-    "plt.ylabel('Time from P-wave arrival\\nto slope transition (s)', fontsize = 14)\n",
-    "plt.tick_params(labelsize = 12)\n",
-    "plt.legend(fontsize = 12)\n",
-    "plt.subplots_adjust(left = 0.15)\n",
+    "plt.scatter(bad_results.mag.values, bad_results.xinter.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
+    "plt.scatter(good_results.mag.values, good_results.xinter.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
+    "plt.xlabel('Earthquake magnitude')\n",
+    "plt.ylabel('Transition time (s)')\n",
+    "plt.legend()\n",
     "# plt.show()\n",
     "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_mag_vs_transtime.png', format = 'PNG')\n",
     "plt.close()\n",
     "\n",
     "plt.figure(dpi = 400)\n",
-    "plt.scatter(bad_results.mag.values, bad_results.m1.values, marker = 'x', color = '#E9072B', label = '\"Poorly behaved\" waveforms')\n",
+    "plt.scatter(bad_results.mag.values, bad_results.m1.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
     "plt.scatter(good_results.mag.values, good_results.m1.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
-    "plt.xlabel('Earthquake magnitude', fontsize = 14)\n",
-    "plt.ylabel('Line 1 slope', fontsize = 14)\n",
-    "plt.tick_params(labelsize = 12)\n",
-    "plt.legend(fontsize = 12)\n",
-    "# plt.subplots_adjust(left = 0.3)\n",
+    "plt.xlabel('Earthquake magnitude')\n",
+    "plt.ylabel('Line 1 slope')\n",
+    "plt.legend()\n",
     "# plt.show()\n",
     "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_mag_vs_m1.png', format = 'PNG')\n",
     "plt.close()\n",
     "\n",
     "plt.figure(dpi = 400)\n",
-    "plt.scatter(bad_results.mag.values, bad_results.m2.values, marker = 'x', color = '#E9072B', label = '\"Poorly behaved\" waveforms')\n",
+    "plt.scatter(bad_results.mag.values, bad_results.m2.values, marker = 'x', color = '#E9072B', label = '\"Poorly-behaved\" waveforms')\n",
     "plt.scatter(good_results.mag.values, good_results.m2.values, marker = 'o', color = '#355464', alpha = 0.6, label = '\"Well-behaved\" waveforms')\n",
-    "plt.xlabel('Earthquake magnitude', fontsize = 14)\n",
-    "plt.ylabel('Line 2 slope', fontsize = 14)\n",
-    "plt.tick_params(labelsize = 12)\n",
-    "plt.legend(fontsize = 12)\n",
-    "# plt.subplots_adjust(left = 0.3)\n",
+    "plt.xlabel('Earthquake magnitude')\n",
+    "plt.ylabel('Line 2 slope')\n",
+    "plt.legend()\n",
     "# plt.show()\n",
     "plt.savefig(path_to_files + 'figures/mcmc_plots/summary_mag_vs_m2.png', format = 'PNG')\n",
     "plt.close()"
