Codes to filter the strain data and do the rest of the processing up to MCMC

--- a/ipynbs/filtered_strain/4_set_pre_p_filtered_peak_strain_to_same_level.ipynb
+++ b/ipynbs/filtered_strain/4_set_pre_p_filtered_peak_strain_to_same_level.ipynb
@@ -52,7 +52,7 @@
     "mags_test = mags[4:5]\n",
     "rows_for_extra_times = [8,9,14,16]\n",
     "\n",
-    "snr_array = np.load(path_to_files + 'NA_evt-sta_dist_array_less500km_withdata_withrmssnrs.npy')\n",
+    "snr_array = np.load(path_to_files + 'NA_evt-sta_dist_array_less500km_withdata_withrmssnrs_FILTERED.npy')\n",
     "\n",
     "# Array order:\n",
     "\n",
@@ -72,9 +72,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7e345c8f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(snr_array)):\n",
@@ -87,7 +85,7 @@
     "    \n",
     "    if snr != 'nan' and snr > 2:\n",
     "        \n",
-    "        strain_waves = read(path_to_files + 'strain_data/trimmed/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
+    "        strain_waves = read(path_to_files + 'strain_data/filtered_trimmed_rms/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
     "        \n",
     "        mod_strain = strain_waves.copy()\n",
     "        \n",
@@ -147,7 +145,7 @@
     "#         plt.close();\n",
     "        \n",
     "        # Create folder for the event\n",
-    "        eq_sta_save_dir = path_to_files + 'strain_data/peak_post_p/' + str(eq_id) + '/'\n",
+    "        eq_sta_save_dir = path_to_files + 'strain_data/filtered_peak_post_p/' + str(eq_id) + '/'\n",
     "#                 print(eq_sta_save_dir)\n",
     "        if os.path.isdir(eq_sta_save_dir):\n",
     "            pass\n",
