--- a/ipynbs/filtered_strain/1_trim_filtered_rms_strain_by_P_pick.ipynb
+++ b/ipynbs/filtered_strain/1_trim_filtered_rms_strain_by_P_pick.ipynb
@@ -56,6 +56,10 @@
    "execution_count": 3,
    "id": "9f23bac0",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
