Updating map figure

--- a/ipynbs/14_calculate_strain_SNR.ipynb
+++ b/ipynbs/14_calculate_strain_SNR.ipynb
@@ -93,10 +93,29 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "a1821a92-bbf6-4258-a928-7910e2fdad35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(439, 9)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "68ef436d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
