--- a/ipynbs/plotting/11_plot_peak_strain_color_by_hypo_dist.ipynb
+++ b/ipynbs/plotting/11_plot_peak_strain_color_by_hypo_dist.ipynb
@@ -70,6 +70,27 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ddc60638-fb3e-4f25-bf5a-53b4a19f83ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(439, 9)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "117ddb00",
    "metadata": {},
    "outputs": [
