--- a/ipynbs/5_make_smaller_selection_to_pick.ipynb
+++ b/ipynbs/5_make_smaller_selection_to_pick.ipynb
@@ -45,6 +45,27 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "1cf508d7-29f8-4b94-98c6-119af8bdeac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2660, 9)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hypdist_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9b867add",
    "metadata": {},
    "outputs": [
