--- a/ipynbs/manuscript_figures/Figure2_peak_strain_example.ipynb
+++ b/ipynbs/manuscript_figures/Figure2_peak_strain_example.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "506314dc-fb10-4276-93bc-e2be16dc2762",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
     "        \n",
     "        # ax.set_title('Processing example', fontsize = 16)\n",
     "        ax.plot(strain_waves_times[low_xlim_samp:high_xlim_samp], strain_waves_data[low_xlim_samp:high_xlim_samp], color = 'skyblue', label = 'RMS strain')\n",
-    "        ax.plot(pst_postp_times[low_xlim_samp:high_xlim_samp], pst_postp_data[low_xlim_samp:high_xlim_samp], color = 'red', label = 'Peak strain (tracking\\nfrom P-arrival)')\n",
+    "        ax.plot(pst_postp_times[low_xlim_samp:high_xlim_samp], pst_postp_data[low_xlim_samp:high_xlim_samp], color = 'red', linestyle = '--', label = 'Peak strain (tracking\\nfrom P-arrival)')\n",
     "        # ax.plot(pst_times[low_xlim_samp:high_xlim_samp], pst_data[low_xlim_samp:high_xlim_samp]*10**9, color = 'skyblue', linestyle = '--', label = 'Prelim. peak strain')\n",
     "        ax.set_yscale('log')\n",
     "        ax.set_ylabel('Strain', fontsize = 16)\n",
@@ -262,227 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "064cbffd-c928-496c-8210-40622b302792",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>mag</th>\n",
-       "      <th>magType</th>\n",
-       "      <th>nst</th>\n",
-       "      <th>gap</th>\n",
-       "      <th>dmin</th>\n",
-       "      <th>rms</th>\n",
-       "      <th>...</th>\n",
-       "      <th>updated</th>\n",
-       "      <th>place</th>\n",
-       "      <th>type</th>\n",
-       "      <th>horizontalError</th>\n",
-       "      <th>depthError</th>\n",
-       "      <th>magError</th>\n",
-       "      <th>magNst</th>\n",
-       "      <th>status</th>\n",
-       "      <th>locationSource</th>\n",
-       "      <th>magSource</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-12-20T10:34:24.770Z</td>\n",
-       "      <td>40.525</td>\n",
-       "      <td>-124.423</td>\n",
-       "      <td>17.91</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>mw</td>\n",
-       "      <td>38</td>\n",
-       "      <td>214</td>\n",
-       "      <td>0.0818</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2023-12-13T02:59:56.915Z</td>\n",
-       "      <td>15km WSW of Ferndale, CA</td>\n",
-       "      <td>earthquake</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>reviewed</td>\n",
-       "      <td>nc</td>\n",
-       "      <td>nc</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       time latitude longitude  depth  mag magType nst  gap  \\\n",
-       "1  2022-12-20T10:34:24.770Z   40.525  -124.423  17.91  6.4      mw  38  214   \n",
-       "\n",
-       "     dmin   rms  ...                   updated                     place  \\\n",
-       "1  0.0818  0.18  ...  2023-12-13T02:59:56.915Z  15km WSW of Ferndale, CA   \n",
-       "\n",
-       "         type horizontalError depthError magError magNst    status  \\\n",
-       "1  earthquake            0.67        0.4      NaN      0  reviewed   \n",
-       "\n",
-       "  locationSource magSource  \n",
-       "1             nc        nc  \n",
-       "\n",
-       "[1 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_to_files = '/Users/sydneydybing/StrainProject/2024/'\n",
-    "\n",
-    "earthquakes = pd.read_csv(path_to_files + 'M6_catalog_2004-2024.csv', dtype = str)\n",
-    "earthquakes = earthquakes.iloc[[1]]\n",
-    "stas = ['B028']\n",
-    "rows_for_extra_times = [8,9,14,16]\n",
-    "\n",
-    "origin_times = earthquakes.time.values\n",
-    "mags = earthquakes.mag.values\n",
-    "\n",
-    "earthquakes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "cdd6ae5f-8149-4394-8eb3-7e626097301b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for idx in range(len(earthquakes)):\n",
-    "        \n",
-    "    ot = origin_times[idx]\n",
-    "    \n",
-    "    if idx in rows_for_extra_times:\n",
-    "        cut_ot = ot[:13]\n",
-    "    else:\n",
-    "        cut_ot = ot[:10]\n",
-    "    \n",
-    "    eq_id = str(cut_ot) + '_M' + str(mags[idx])\n",
-    "#     print(eq_id)\n",
-    "        \n",
-    "    # Find rows that match this event in the array with the hypocentral distances\n",
-    "    \n",
-    "    i = np.where(dist_array[:,0] == eq_id)[0]\n",
-    "#     print(dist_array[i])\n",
-    "    \n",
-    "    for sta in stas:\n",
-    "        \n",
-    "#         print(sta)\n",
-    "        \n",
-    "        try:\n",
-    "            \n",
-    "            # Find row that matches this station within the rows of the right event\n",
-    "            j = np.where(dist_array[i,5] == sta)[0]\n",
-    "            hypdist = float(dist_array[i][j][0][8])\n",
-    "            int_hypdist = int(hypdist)\n",
-    "            snr = int(float(dist_array[i][j][0][9]))\n",
-    "        \n",
-    "            # Read in data - peak strain data only has the ones with SNR > 2\n",
-    "            pst = read(path_to_files + 'strain_data/peak/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
-    "            pst_postp = read(path_to_files + 'strain_data/peak_post_p/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
-    "            strain_waves = read(path_to_files + 'strain_data/trimmed/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
-    "            seis_waves = read(path_to_files + 'seismic_data/trimmed/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
-    "                \n",
-    "        except:\n",
-    "            continue # skips to next station\n",
-    "            \n",
-    "        pst_times = pst[0].times()\n",
-    "        pst_data = pst[0].data\n",
-    "        pst_postp_times = pst_postp[0].times()\n",
-    "        pst_postp_data = pst_postp[0].data\n",
-    "        strain_waves_times = strain_waves[0].times()\n",
-    "        strain_waves_data = strain_waves[0].data\n",
-    "        seis_waves_times = seis_waves[0].times()\n",
-    "        seis_waves_data = seis_waves[0].data\n",
-    "        \n",
-    "        samp_rate = pst[0].stats.sampling_rate\n",
-    "        seis_samp_rate = seis_waves[0].stats.sampling_rate\n",
-    "\n",
-    "        low_xlim_sec = 5\n",
-    "        high_xlim_sec = 40\n",
-    "\n",
-    "        low_xlim_samp = int(low_xlim_sec * samp_rate)\n",
-    "        high_xlim_samp = int(high_xlim_sec * samp_rate)\n",
-    "        \n",
-    "        seis_low_xlim_samp = int(low_xlim_sec * seis_samp_rate)\n",
-    "        seis_high_xlim_samp = int(high_xlim_sec * seis_samp_rate)\n",
-    "        max_seis = max(seis_waves_data)\n",
-    "\n",
-    "        # Move the flat line at the beginning of each timeseries to the same level\n",
-    "\n",
-    "        norm_data = np.copy(pst_postp_data)\n",
-    "        norm_level = pst_postp_data[0]\n",
-    "#         print(norm_level)\n",
-    "        norm_data = norm_data - norm_level + 1*10**-9 # Subtract the starting value, add 10^-9 to set at 10^0 on nanostrain plot\n",
-    "\n",
-    "        # Plot stations, but avoid plotting the weird stations for the two problem earthquakes\n",
-    "            \n",
-    "        fig = plt.figure(figsize = (8,4.5), dpi = 400, facecolor = 'white', num = 1, clear = True)\n",
-    "        ax = fig.add_subplot(111)\n",
-    "        \n",
-    "        ax.set_title('Two-stage growth example', fontsize = 16)\n",
-    "        # ax.plot(strain_waves_times[low_xlim_samp:high_xlim_samp], strain_waves_data[low_xlim_samp:high_xlim_samp], color = '#ffb4d9', label = 'RMS strain')\n",
-    "        ax.plot(pst_postp_times[low_xlim_samp:high_xlim_samp], pst_postp_data[low_xlim_samp:high_xlim_samp], color = 'red', label = 'Peak strain starting\\nfrom P-arrival')\n",
-    "        # ax.plot(pst_times[low_xlim_samp:high_xlim_samp], pst_data[low_xlim_samp:high_xlim_samp]*10**9, color = 'skyblue', linestyle = '--', label = 'Prelim. peak strain')\n",
-    "        ax.set_yscale('log')\n",
-    "        ax.set_ylabel('Strain', fontsize = 16)\n",
-    "        ax.set_xlabel('Time (s)', fontsize = 16)\n",
-    "        ax.set_xlim(low_xlim_sec,high_xlim_sec)\n",
-    "        # if high_xlim_sec <= 30:\n",
-    "        ax.axvline(x = 10, color = 'gray', linestyle = '--', alpha = 0.5, label = 'P-wave arrival')\n",
-    "        ax.tick_params(labelsize = 14)\n",
-    "        ax.legend(loc = 'lower right', ncol = 1, fontsize = 14)\n",
-    "        \n",
-    "        # ax2 = ax.twinx()\n",
-    "        # ax2.plot(seis_waves_times[seis_low_xlim_samp:seis_high_xlim_samp], seis_waves_data[seis_low_xlim_samp:seis_high_xlim_samp]/max_seis, color = 'green', alpha = 0.5, label = 'EHZ seismic data')\n",
-    "        # ax2.set_ylabel('Normalized counts', fontsize = 15)\n",
-    "        # ax2.tick_params(labelsize = 13)\n",
-    "        # ax2.legend(loc = 'lower left', fontsize = 10)\n",
-    "        \n",
-    "        # plt.show();\n",
-    "\n",
-    "        plt.savefig(path_to_files + 'two-stage_example_section_3.png', format = 'PNG')\n",
-    "        plt.close();"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "12a022c2-bce4-4ab7-9bd0-5766843582f5",
+   "id": "c3ac57c9-b06f-4c40-b90a-43ad8c61f12c",
    "metadata": {},
    "outputs": [],
    "source": []
