--- a/ipynbs/manuscript_figures/Figure4b_homo_rupt_onset_time_3D.ipynb
+++ b/ipynbs/manuscript_figures/Figure4b_homo_rupt_onset_time_3D.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "2adf8a96-5112-4957-99c2-b368ec6dbdc6",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
     "ax = fig.add_subplot(111, projection='3d')\n",
     "# ax.set_title('M7.1 Ridgecrest earthquake fault (3D view)')\n",
     "\n",
-    "p = ax.scatter(lon, lat, depth, c=onset, cmap='viridis_r', marker='o', s=20, lw=0, label = 'Subfaults')\n",
+    "p = ax.scatter(lon, lat, depth, c=onset, cmap='turbo_r', marker='o', s=20, lw=0, label = 'Subfaults')\n",
     "\n",
     "ax.set_xlabel('Longitude', fontsize = 12)\n",
     "ax.invert_xaxis()\n",
@@ -51,7 +51,8 @@
     "\n",
     "# plt.show()\n",
     "\n",
-    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/Figure_4a.png', format = 'PNG')\n",
+    "# plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/Figure_4x.png', format = 'PNG')\n",
+    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/Figure_4b.png', format = 'PNG')\n",
     "plt.close()"
    ]
   },
