Trying the MCMC with the normalized strain

--- a/ipynbs/taiwan_strain/5_plot_filtered_peak_strain_normalized.ipynb
+++ b/ipynbs/taiwan_strain/5_plot_filtered_peak_strain_normalized.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "02ec9a5f-48a6-4091-8012-da99d48f2253",
    "metadata": {},
    "outputs": [
@@ -570,6 +570,7 @@
     "\n",
     "        pst_times = pst[0].times()\n",
     "        pst_data = pst[0].data\n",
+    "        log10_data = np.log10(pst_data)\n",
     "        samp_rate = pst[0].stats.sampling_rate\n",
     "        low_xlim_samp = int(low_xlim_sec * samp_rate)\n",
     "        high_xlim_samp = int(high_xlim_sec * samp_rate)\n",
@@ -584,6 +585,7 @@
     "        # Plot stations\n",
     "        # ax.plot(pst_times, pst_data*10**9, color = cmap(int_hypdist-1), label = sta)\n",
     "        ax.plot(pst_times[low_xlim_samp:high_xlim_samp], norm_data[low_xlim_samp:high_xlim_samp], color = cmap(int_hypdist-1), label = sta)\n",
+    "        # ax.plot(pst_times[low_xlim_samp:high_xlim_samp], log10_data[low_xlim_samp:high_xlim_samp], color = cmap(int_hypdist-1), label = sta)\n",
     "        ax.set_yscale('log')\n",
     "        ax.set_ylabel('Log of absolute relative peak\\ndilatational strain', fontsize = 15)\n",
     "        ax.set_xlabel('Time (s)', fontsize = 15)\n",
