Updated figure 2 and 5

--- a/ipynbs/manuscript_figures/Figure2_peak_strain_example.ipynb
+++ b/ipynbs/manuscript_figures/Figure2_peak_strain_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "95a72393-26e7-44ca-9f26-425ce37b847a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "8bebc685-06da-462c-b153-2733d040ecc6",
    "metadata": {},
    "outputs": [
@@ -70,25 +70,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2010-01-10T00:27:39.320Z</td>\n",
-       "      <td>40.652</td>\n",
-       "      <td>-124.6925</td>\n",
-       "      <td>28.737</td>\n",
-       "      <td>6.5</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-12-20T10:34:24.770Z</td>\n",
+       "      <td>40.525</td>\n",
+       "      <td>-124.423</td>\n",
+       "      <td>17.91</td>\n",
+       "      <td>6.4</td>\n",
        "      <td>mw</td>\n",
-       "      <td>51</td>\n",
-       "      <td>220</td>\n",
-       "      <td>0.3225</td>\n",
-       "      <td>0.2</td>\n",
+       "      <td>38</td>\n",
+       "      <td>214</td>\n",
+       "      <td>0.0818</td>\n",
+       "      <td>0.18</td>\n",
        "      <td>...</td>\n",
-       "      <td>2022-08-05T23:26:47.399Z</td>\n",
-       "      <td>37 km WNW of Ferndale, California</td>\n",
+       "      <td>2023-12-13T02:59:56.915Z</td>\n",
+       "      <td>15km WSW of Ferndale, CA</td>\n",
        "      <td>earthquake</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>1.31</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>8</td>\n",
+       "      <td>0</td>\n",
        "      <td>reviewed</td>\n",
        "      <td>nc</td>\n",
        "      <td>nc</td>\n",
@@ -99,22 +99,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                        time latitude  longitude   depth  mag magType nst  \\\n",
-       "29  2010-01-10T00:27:39.320Z   40.652  -124.6925  28.737  6.5      mw  51   \n",
+       "                       time latitude longitude  depth  mag magType nst  gap  \\\n",
+       "1  2022-12-20T10:34:24.770Z   40.525  -124.423  17.91  6.4      mw  38  214   \n",
        "\n",
-       "    gap    dmin  rms  ...                   updated  \\\n",
-       "29  220  0.3225  0.2  ...  2022-08-05T23:26:47.399Z   \n",
+       "     dmin   rms  ...                   updated                     place  \\\n",
+       "1  0.0818  0.18  ...  2023-12-13T02:59:56.915Z  15km WSW of Ferndale, CA   \n",
        "\n",
-       "                                place        type horizontalError depthError  \\\n",
-       "29  37 km WNW of Ferndale, California  earthquake            0.55       1.31   \n",
+       "         type horizontalError depthError magError magNst    status  \\\n",
+       "1  earthquake            0.67        0.4      NaN      0  reviewed   \n",
        "\n",
-       "   magError magNst    status locationSource magSource  \n",
-       "29      NaN      8  reviewed             nc        nc  \n",
+       "  locationSource magSource  \n",
+       "1             nc        nc  \n",
        "\n",
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +123,11 @@
     "path_to_files = '/Users/sydneydybing/StrainProject/2024/'\n",
     "\n",
     "earthquakes = pd.read_csv(path_to_files + 'M6_catalog_2004-2024.csv', dtype = str)\n",
-    "earthquakes = earthquakes.iloc[[29]]\n",
-    "stas = ['B933']\n",
+    "earthquakes = earthquakes.iloc[[1]]\n",
+    "bsm_mda = pd.read_csv(path_to_files + 'bsm_metadata.csv')\n",
+    "NA_only = bsm_mda.loc[bsm_mda['LONG'] < -110]\n",
+    "stas = NA_only['BNUM'].values\n",
+    "stas = ['B033']\n",
     "rows_for_extra_times = [8,9,14,16]\n",
     "\n",
     "origin_times = earthquakes.time.values\n",
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "84d12c60-5aa8-4032-889f-38a7c391c5d3",
    "metadata": {},
    "outputs": [],
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "506314dc-fb10-4276-93bc-e2be16dc2762",
    "metadata": {},
    "outputs": [],
@@ -193,9 +196,9 @@
     "            snr = int(float(dist_array[i][j][0][9]))\n",
     "        \n",
     "            # Read in data - peak strain data only has the ones with SNR > 2\n",
-    "            pst = read(path_to_files + 'strain_data/peak/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
-    "            pst_postp = read(path_to_files + 'strain_data/peak_post_p/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
-    "            strain_waves = read(path_to_files + 'strain_data/trimmed/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
+    "            pst = read(path_to_files + 'strain_data/3comp_peak/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
+    "            pst_postp = read(path_to_files + 'strain_data/3comp_peak_post_p/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
+    "            strain_waves = read(path_to_files + 'strain_data/3comp_trimmed_rms/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
     "            seis_waves = read(path_to_files + 'seismic_data/trimmed/' + str(eq_id) + '/' + str(sta) + '.mseed')\n",
     "                \n",
     "        except:\n",
@@ -235,7 +238,7 @@
     "        fig = plt.figure(figsize = (8,4.5), dpi = 400, facecolor = 'white', num = 1, clear = True)\n",
     "        ax = fig.add_subplot(111)\n",
     "        \n",
-    "        # ax.set_title('Processing example', fontsize = 16)\n",
+    "        # ax.set_title(sta, fontsize = 16)\n",
     "        ax.plot(strain_waves_times[low_xlim_samp:high_xlim_samp], strain_waves_data[low_xlim_samp:high_xlim_samp], color = 'skyblue', label = 'RMS strain')\n",
     "        ax.plot(pst_postp_times[low_xlim_samp:high_xlim_samp], pst_postp_data[low_xlim_samp:high_xlim_samp], color = 'red', linestyle = '--', label = 'Peak strain (tracking\\nfrom P-arrival)')\n",
     "        # ax.plot(pst_times[low_xlim_samp:high_xlim_samp], pst_data[low_xlim_samp:high_xlim_samp]*10**9, color = 'skyblue', linestyle = '--', label = 'Prelim. peak strain')\n",
